[package]
name = "vtil-parser"
version = "0.4.0"
authors = ["Keegan Saunders <keegan@undefinedbehaviour.org>"]
edition = "2018"
description = "Read/write VTIL files in Rust."
documentation = "https://docs.rs/vtil-parser"
repository = "https://github.com/vtil-project/VTIL-RustParser"
license = "BSD-3-Clause"
keywords = ["parser", "vtil"]
exclude = ["/resources"]

[dependencies]
scroll = "0.10.2"
memmap = "0.7.0"
bitflags = "1"
thiserror = "1"

[badges]
travis-ci = { repository = "vtil-project/VTIL-RustParser", branch = "main" }
